# rfind

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  benchmark_results.csv  gen.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
src/: benchmark.sh  index.rs  install.sh  lib.rs  main.rs  permissions.rs
src/filters/: filesize.rs  filetype.rs  mod.rs  time.rs
tests/: integration_test.rs
