[package]
name = "rfind"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "7.0.0"
glob = "0.3"
walkdir = "2.3"
structopt = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
rayon = "1.7"
directories-next = "2.0"

[[bin]]
name = "rfind"
path = "src/main.rs"
