[package]
name = "rfind"
version = "0.1.0"
edition = "2018"

[dependencies]
glob = "0.3"
indicatif = "0.17"
walkdir = "2.3"
structopt = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.2"
strsim = "0.11.1"
directories-next = "2.0"
humansize = "2.1.3"

[dev-dependencies]
tempfile = "3.6"
assert_fs = "1.0"
