[package]
name = "rfind"
version = "0.1.0"
edition = "2018"

[dependencies]
glob = "0.3.2"
indicatif = "0.17"
walkdir = "2.3"
structopt = "0.3"
bincode = "1.3"
serde = { version = "1.0.217", features = ["derive"] }
ctrlc = "3.2"
strsim = "0.11.1"
directories-next = "2.0"
humansize = "2.1.3"
notify = "7.0.0"
crossbeam-channel = "0.5.14"
num_cpus = "1.16.0"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
colored = "2.2.0"
rayon = "1.10.0"
memchr = "2.7.4"
assert_cmd = "2.0.16"
predicates = "3.1.3"
log = "0.4.22"
env_logger = "0.11.6"
pathdiff = "0.2.3"
parking_lot = "0.12.3"
filetime = "0.2.25"
windows-acl = "0.3.0"
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[dev-dependencies]
tempfile = "3.15.0"
assert_fs = "1.0"
